# tree-sitter-csound

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  pyrightconfig.json  setup.py  to_snippets.py  tree-sitter-csound.wasm  tree-sitter.json
bindings/c/: tree-sitter-csound.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_csound/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCsound/: csound.h
bindings/swift/TreeSitterCsoundTests/: TreeSitterCsoundTests.swift
csound_data_parse/: csound.json  flags.json  macros.json  to_parse.py
csound_data_parse/json_data/: csound.json
csound_json_data/: flags.json
csound_manual/: README.md  categories.py  diffopnames.py  makeAppendices.py  mkdocs.yml
csound_manual/.github/workflows/: ci.yml
csound_manual/docs/: csbeats.md  genIndex.md  index.md  miscopcodes.md  mixer.md  opcodesIndex.md  opcodesQuickRef.md  signalflowgraph.md
csound_manual/docs/control/: clockctl.md  conditional.md  durctl.md  invocat.md  pgmctl.md  realtime.md  reinitn.md  sensing.md  stacks.md  (+2 more)
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  web_indents.scm
snippets/: csound.json  flags.json  manual_indexes.json  snippets.json  stemplate.json  to_snippets.py
src/: grammar.json  node-types.json  parser.c
test/: online_test.csd  test.csd  test_lens.csd  test_opt_block.csd  test_orc.orc  test_plugin.csd  test_sco.sco  test_score_bin.csd  test_udo.udo
(+1820 files in other folders)
